Add Upsampler - JukeboxDiffusionUpsampler - UpsamplingPipeline - Update attn_unet_1d

--- a/notebooks/2.0-jukebox-diffusion-generate.ipynb
+++ b/notebooks/2.0-jukebox-diffusion-generate.ipynb
@@ -48,8 +48,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ckpt_path = '../logs/train/runs/2022-12-09_19-50-48/checkpoints/last.ckpt'\n",
-    "ckpt = torch.load(ckpt_path)"
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "device= \"cpu\"\n",
+    "print(f'Using device: {device}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ckpt_path = '../logs/train/runs/2022-12-13_23-55-32/checkpoints/last.ckpt'\n",
+    "ckpt = torch.load(ckpt_path, map_location=device)"
    ]
   },
   {
@@ -70,18 +81,8 @@
     "\n",
     "model = JukeboxDiffusion(model=seqmodel)\n",
     "model.load_state_dict(state_dict=state_dict)\n",
+    "model = model.to(device)\n",
     "model.hparams.jukebox_embedding_lvl = 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "model.to(device)\n",
-    "print(f'Using device: {device}')"
    ]
   },
   {
@@ -100,8 +101,42 @@
    "outputs": [],
    "source": [
     "# check that decoding works\n",
-    "dataset = JukeboxDataset(root_dir=os.environ['MAESTRO_DATASET_DIR'], split='train', lvl=2, sequence_len=4096)\n",
-    "test_audio = model.preprocess(dataset[0].unsqueeze(0).to(device))"
+    "dataset = JukeboxDataset(root_dir=os.environ['MAESTRO_DATASET_DIR'], split='train', lvl=[2, 1, 0], sequence_len=4096*4, samples_per_file=2)\n",
+    "sample = dataset[0]\n",
+    "#test_audio = model.preprocess(dataset[0].unsqueeze(0).to(device))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample[1].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "high_lvl_sample = sample[2][0]\n",
+    "mid_lvl_sample = sample[1][0]\n",
+    "low_lvl_sample = sample[0][0]\n",
+    "\n",
+    "high_lvl_audio = model.decode(model.preprocess(high_lvl_sample.unsqueeze(0).to(device)), lvl=2)\n",
+    "mid_lvl_audio = model.decode(model.preprocess(mid_lvl_sample.unsqueeze(0).to(device)), lvl=1)\n",
+    "low_lvl_sample = model.decode(model.preprocess(low_lvl_sample.unsqueeze(0).to(device)), lvl=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_audio.min(), test_audio.max()"
    ]
   },
   {
@@ -111,7 +146,9 @@
    "outputs": [],
    "source": [
     "with torch.no_grad():\n",
-    "    play_audio(model.decode(test_audio))"
+    "    play_audio(high_lvl_audio)\n",
+    "    play_audio(mid_lvl_audio)\n",
+    "    play_audio(low_lvl_sample)"
    ]
   },
   {
@@ -124,10 +161,19 @@
     "    embeddings = model.generate_unconditionally(\n",
     "                batch_size=4,\n",
     "                seq_len=4096,\n",
-    "                num_inference_steps=200,\n",
-    "                seed=21,\n",
+    "                num_inference_steps=100,\n",
+    "                seed=420,\n",
     "            )\n",
     "    audio = model.decode(embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings.min(), embeddings.max()"
    ]
   },
   {
@@ -149,7 +195,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 ('audiogen')",
+   "display_name": "audiogen",
    "language": "python",
    "name": "python3"
   },
@@ -163,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.6 | packaged by conda-forge | (main, Aug 22 2022, 20:36:39) [GCC 10.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
