--- a/notebooks/1.0-jukebox-dataset-audio.ipynb
+++ b/notebooks/1.0-jukebox-dataset-audio.ipynb
@@ -139,7 +139,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "audiogen",
    "language": "python",
    "name": "python3"
   },
@@ -153,12 +153,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "2f33e56622382379b77b71923275a23896519a155863590465b9c9d0b9ba580f"
    }
   }
  },
