--- a/notebooks/2.0-jukebox-diffusion-generate.ipynb
+++ b/notebooks/2.0-jukebox-diffusion-generate.ipynb
@@ -28,6 +28,7 @@
     "\n",
     "from src.datamodule.maestro_datamodule import MaestroDataModule\n",
     "from src.model.jukebox_diffusion import JukeboxDiffusion\n",
+    "from src.model.jukebox_vqvae import JukeboxVQVAEModel\n",
     "from src.module.diffusion_attn_unet_1d import DiffusionAttnUnet1D\n",
     "\n",
     "from IPython.display import Audio"
@@ -87,9 +88,9 @@
     "    )\n",
     "\n",
     "# remove all keys from state_dict that start with 'jukebox'\n",
-    "state_dict = {k: v for k, v in ckpt['state_dict'].items() if not k.startswith('jukebox_vqvae')}\n",
+    "state_dict = {k: v for k, v in ckpt['state_dict'].items() if not 'vqvae' in k}\n",
     "\n",
-    "model = JukeboxDiffusion(model=seqmodel)\n",
+    "model = JukeboxDiffusion(model=seqmodel, load_vqvae=False)\n",
     "model.load_state_dict(state_dict=state_dict)\n",
     "model = model.to(device)\n",
     "model.hparams.jukebox_embedding_lvl = 1"
@@ -102,7 +103,7 @@
    "outputs": [],
    "source": [
     "model.prepare_data()\n",
-    "model.load_jukebox_vqvae(os.environ[\"JUKEBOX_VQVAE_PATH\"])"
+    "model.vqvae = JukeboxVQVAEModel(device=model.device)"
    ]
   },
   {
@@ -193,6 +194,15 @@
     "        'max': sample.max().item(),\n",
     "    }\n",
     "\n",
+    "def compute_stats_per_channel(sample: torch.Tensor):\n",
+    "    sample = rearrange(sample, 'b t c -> (b t) c')\n",
+    "    return {\n",
+    "        'mean': sample.mean(dim=0).tolist(),\n",
+    "        'std': sample.std(dim=0).tolist(),\n",
+    "        'min': sample.min(dim=0),\n",
+    "        'max': sample.max(dim=0),\n",
+    "    }\n",
+    "\n",
     "def sample_histogram(sample: torch.Tensor, n_channels: int = 0, flatten=True):\n",
     "    \"\"\"\n",
     "    Args:\n",
@@ -270,6 +280,15 @@
    "outputs": [],
    "source": [
     "compute_sample_statistics(sample_lvl1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compute_stats_per_channel(sample_lvl1)"
    ]
   },
   {
